# block-questions

./: .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml  first_time_setup.sh  quick_start.sh  start_eosio_docker.sh  start_mongodb_docker.sh
backend/: .babelrc  .env  nodemon.json  package-lock.json  package.json  tsconfig.json  tslint.json
backend/src/: index.ts  schema.graphql
backend/src/entities/: Question.ts
backend/src/models/: blockIndexStateModel.ts  index.ts  post.model.ts  question.ts
backend/src/mongoose/: state.ts
backend/src/questions/: effects.ts  index.ts  model.ts  question.ts  updaters.ts
backend/src/utils/: io.ts
eosio/: Dockerfile
eosio/contracts/: CMakeLists.txt  Dockerfile
eosio/contracts/blog/: blog.cpp
eosio/contracts/board/: CMakeLists.txt
eosio/contracts/question/: CMakeLists.txt  Makefile
eosio/contracts/question/src/: logger.hpp  question.cpp  question.hpp  questionbook.cpp  questionbook.hpp
eosio/contracts/question/tests/: answer_question_test.py  post_question_test.py
eosio/contracts/tokensupply/: CMakeLists.txt
eosio/contracts/tokensupply/src/: tokensupply.cpp  tokensupply.hpp
eosio/contracts/tokensupply/tests/: tokensupply_test.py
eosio/scripts/: deploy_contracts.sh  start.sh
eosio_docker/scripts/: init_blockchain.sh
frontend/: .env  .eslintrc.json  craco.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.paths.json
frontend/public/: index.html
frontend/src/: App.jsx  Trash.jsx  index.tsx  setupProxy.js
frontend/types/: scatterjs-core.d.ts  scatterjs-plugin-eosjs2.d.ts
(+38 files in other folders)
